# devind-django-notifications

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  whitelist.txt
.github/workflows/: release.yml
devind_notifications/: __init__.py
devind_notifications/models/: mailing.py
