[tool.poetry]
name = "devind_notifications"
version = "0.0.1"
description = "Devind django app for notifications."
authors = ["Victor <lyferov@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
devind-core = "^0.1.0"
Django = "^3"
graphene-django = "^2.15.0"
devind-helpers = "^0.2.1"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
